Improvements/Fixes for embeddings UI
- Don't show "Use as thumbnail" if no embeddings were used in the prompt
- Fix layout issue on small screens
- use req.use_embeddings_model instead of parsing the prompt
- Add button to upload a thumb" ../../index.html ../css/main.css main.js

--- a/ui/media/css/main.css
+++ b/ui/media/css/main.css
@@ -1706,6 +1706,12 @@ body.wait-pause {
     overflow-y: scroll;
 }
 
+@media screen and (max-width: 1400px) {
+    #embeddings-list {
+        width: 80vW;
+    }
+}
+
 #embeddings-list button {
     margin: 2px;
     color: var(--button-color);
